# rosemary

./: .gitignore  README.md  pyproject.toml  requirements.txt
.tours/: build_features.tour  fetch_daily.tour  tours.tour  train_baseline_model.tour
Phase 1/: README.md
Phase 1/notebooks/: eval_backtest_baseline.ipynb  eval_backtest_hold.ipynb
Phase 1/scripts/: backtest_baseline_costs.py  backtest_mean_reversion.py
notebooks/: eval_walkforward.ipynb
phase_1/notebooks/: eda_features_daily.ipynb  eval_backtest_costs.ipynb  eval_backtest_trend.ipynb  eval_backtest_trend_vol.ipynb  eval_walkforward_compare.ipynb
phase_1/scripts/: backtest_baseline.py  backtest_walkforward.py  fetch_daily.py
phase_2/: README.md  __init__.py
phase_2/notebooks/: 01_spy_data_audit.ipynb  03_walkforward_trend.ipynb  05_walkforward_mean_rev.ipynb  07_meta_allocator_walkforward.ipynb  08_multi_asset_audit.ipynb  09_per_asset_system_walkforward.ipynb  10_portfolio_walkforward.ipynb  11_stress_tests_and_failures.ipynb  12_allocator_stability_sweep.ipynb  meanrev_strategy_v1_test.ipynb  meta_allocator_smoke_test.ipynb  trend_strategy_smoke_test.ipynb  walkforward_trend.ipynb
phase_3/: README.md  __init__.py
phase_3/notebooks/: 01_soft_allocator_smoke_test.ipynb  02_soft_allocator_walkforward_compare.ipynb  03_soft_allocator_concentration_sweep.ipynb  04_hysteresis_allocator_smoke_test.ipynb  (+3 more)
scripts/: backtest_baseline_hold.py  backtest_baseline_trend.py  backtest_baseline_trend_vol.py  backtest_walkforward_meanrev.py  build_features.py  fetch_daily.py  train_baseline_model.py
(+13 files in other folders)
