[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosemary"
version = "0.0.0"
description = "Research repository for strategy experiments"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phase_1", "phase_2", "phase_3"]
